@@ -92,7 +92,7 @@ public:
         }
 
     //- Compute capillary capacity from head pressure and return moisture (Richards' model)
-    volScalarField correctAndSb(volScalarField& h)
+    tmp<volScalarField> correctAndSb(volScalarField& h)
         {
             if (gMax(hd_) == 0)
             {
@@ -101,7 +101,7 @@ public:
                         << abort(FatalError);
             }
 
-            //- Compute saturation from! head pressure
+            //- Compute saturation from head pressure
             h.dimensions().reset(dimless);
             Se_ = neg(h-hd_) * pow(hd_/(h+VSMALL),alpha_) + pos(h-hd_+VSMALL);
             h.dimensions().reset(dimLength);
@@ -112,8 +112,7 @@ public:
             Ch_.dimensions().reset(dimless/dimLength);
 
             //- Update saturation
-            volScalarField Stmp_(Smin_+(Smax_-Smin_)*Se_);
-            return Se_;
+            return Smin_+(Smax_-Smin_)*Se_;
         };
 
     //- Compute capillary capacity from head pressure and return moisture (Richards' model)
@@ -129,6 +128,16 @@ public:
             return Smin_[celli]+(Smax_[celli]-Smin_[celli])*Se;
         }
 
+    //- Compute saturation from given head pressure
+    tmp<volScalarField> S(volScalarField& h)
+        {
+            //- Compute saturation from head pressure
+            h.dimensions().reset(dimless);
+            tmp<volScalarField> Se = neg(h-hd_) * pow(hd_/(h+VSMALL),alpha_) + pos(h-hd_+VSMALL);
+            h.dimensions().reset(dimLength);
+            //- Return saturation
+            return Smin_+(Smax_-Smin_)*Se;
+        }
 };
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
